# polaris-adapters

./: .env.example  .gitignore  README.md  phase1-results.jsonl  pyproject.toml
polaris/: __init__.py  landing.py
runners/: ag_reports_bulk.py  auditor_general_reports.py  auditor_general_reports_apify.py  boie_mp_expenses.py  boie_pbo_bulk.py  bulk_backfill.py  canada_gazette.py  canada_gazette_publications.py  ciec_registry.py  ciec_registry_bulk.py  ec_boundaries_45.py  ec_boundaries_historical.py  ec_candidate_fin_indexes.py  ec_candidates_search.py  ec_donations_1993_1999.py  ec_donations_2000_2004.py  ec_poll_by_poll_44.py  ec_registered_parties.py  ec_results.py  ec_results_42.py  ec_results_43.py  ec_turnout.py  elections_canada_donations.py  federal_hansard_house.py  federal_hansard_house_44_1_sample.py  federal_lobby_communications.py  federal_lobby_registrations.py  geds.py  geds_apify.py  hansard_cap_patch.py  hansard_full_enumeration.py  hansard_historical_enumerator.py  house_committee_transcripts.py  house_committees_deep_historical.py  house_committees_enum_historical.py  house_committees_enumerator.py  house_committees_enumerator_44_1.py  house_committees_remaining.py  justice_laws_acts.py  justice_laws_acts_full.py  (+29 more)
