[project]
name = "polaris-adapters"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apify-client>=2.5.0",
    "azure-identity>=1.25.3",
    "azure-storage-blob>=12.28.0",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.1.0",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.2",
]
